# CodeReview-Agent

./: .gitignore  README.md  pyproject.toml  run  run_agent.py  setup.py
codereview_agent/: __init__.py  cli.py  config.py  llm.py  planner.py  project_map.py  report.py  review.py  scanner.py  types.py
codereview_agent/capabilities/: __init__.py  base.py  generic.py  registry.py  spring_vue.py
codereview_agent/capabilities/springvue/: __init__.py  capability.py  chain_builder.py  evidence.py  java_index.py  planner.py  source_utils.py
codereview_agent/capabilities/springvue/extractors/: __init__.py  config.py  frontend.py  mybatis.py  spring.py  sql.py
docs/superpowers/plans/: 2026-07-14-capability-modules-refactor-plan.md  2026-07-14-codereview-agent-implementation-plan.md  2026-07-16-springvue-end-to-end-dataflow-implementation-plan.md
docs/superpowers/specs/: 2026-07-14-capability-modules-design.md  2026-07-14-codereview-agent-design.md  2026-07-16-springvue-end-to-end-dataflow-design.md  2026-07-18-springvue-real-project-compatibility-design.md
tests/: test_finding_governance.py  test_pipeline.py  test_springvue_chains.py  test_springvue_extractors.py  test_springvue_planner.py  test_springvue_real_project_compat.py  test_springvue_reporting.py
tests/fixtures/springvue_dataflow/backend/src/main/java/demo/: CreateOrderRequest.java  OrderMapper.java  (+3 more)
tests/fixtures/springvue_dataflow/backend/src/main/resources/: application.yml
tests/fixtures/springvue_dataflow/web/src/api/: orderApi.ts
tests/fixtures/springvue_dataflow/web/src/views/: OrderPage.vue
(+1 files in other folders)
